<resources>
    <string name="app_name">RoomDatabaseDemo</string>
    <string name="submit">Submit</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_to_want_to_delete">Are you sure you to want to delete ?</string>
    <string name="confirmation">Confirmation !</string>
</resources>
