<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/drawable_round_background"
        android:orientation="vertical"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_20sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_25sdp">

    <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:gravity="center"
            android:text="@string/confirmation"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/colorBlack" />


    <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/are_you_sure_you_to_want_to_delete"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_14sdp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2.2">

        <Button
                android:id="@+id/button_delete"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/drawable_filled_gradient"
                android:maxLines="1"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        <Button
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/drawable_blank_gradient"
                android:maxLines="1"
                android:text="@string/cancel"
                android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>
