<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="8">

    <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:hint="@string/enter_your_name"
            android:maxLines="1"
            android:padding="10dp"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="5"
            app:cardElevation="10dp">


        <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="top|start"
                android:hint="@string/enter_your_address"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <Button
            android:id="@+id/btnSubmit"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.7"
            android:background="@color/colorAccent"
            android:padding="20dp"
            android:text="@string/submit"
            android:textColor="@android:color/white" />
</LinearLayout>